Added multichannel grab message buffering

--- a/config
+++ b/config
@@ -102,7 +102,8 @@ channels = (
   { name = "#irssi"; chatnet = "ircnet"; autojoin = "No"; },
   { name = "silc"; chatnet = "silc"; autojoin = "No"; },
   { name = "#mcctestign"; chatnet = "IRCnet"; autojoin = "yes"; },
-  { name = "#smg-linkit"; chatnet = "IRCnet"; autojoin = "yes"; }
+  { name = "#smg-linkit"; chatnet = "IRCnet"; autojoin = "yes"; },
+  { name = "#sahfys"; chatnet = "IRCnet"; autojoin = "yes"; }
 );
 
 aliases = {
